# effective-octo-computing-machine

./: .gitignore  Architechture.md  CHANGELOG.md  CMakeLists.txt  General.md  README.md  TaskManagerTopLevelConnection.drawio  TechStructure.txt  architecture_draft.md  cluster_node.cpp  cluster_node.h  commands.h  compute_core.cpp  compute_core.h  data_storage_processing.cpp  data_storage_processing.h  discovery_service.cpp  discovery_service.h  element.cpp  element.h  list_node.cpp  list_node.h  loger.h  main.cpp  node.cpp  node.h  node_info.h  nodeserializer.cpp  nodeserializer.h  power_meter.cpp  power_meter.h  protocol.md  tcpserver.cpp  tcpserver.h  technical_task.md  tnode_ethernet.cpp  tnode_ethernet.h  Базовая структура.drawio
Node/: CHANGELOG.md  architechtre.drawio  commands.h  compute_core.cpp  data_storage_processing.cpp  data_storage_processing.h  element.cpp  element.h  main.cpp  node.cpp  node_info.h  nodeserializer.h  power_meter.cpp  protocol.md  tnode_ethernet.cpp  tnode_ethernet.h
TaskManager/: CMakeLists.txt  TaskManager.pro  abstractoutput.cpp  abstractoutput.h  consoleinput.cpp  consoleinput.h  constants.h  datacontrol.cpp  datacontrol.h  datainputparser.cpp  datainputparser.h  dataoutputreader.cpp  dataoutputreader.h  fileinput.cpp  fileinput.h  formulacontrol.cpp  formulacontrol.h  formulainputparser.cpp  formulainputparser.h  main.cpp  networklayer.cpp  networklayer.h  node_info.h  serializer.cpp  serializer.h  taskmanager.cpp  taskmanager.h  tcp_side.cpp  tcp_side.h  tcpserver.cpp  tcpserver.h  udp_side.cpp  udp_side.h
TaskManager/Tests/: CMakeLists.txt  tst_datainptest.cpp
TaskManager/Tests/SerialTest/: CMakeLists.txt  tst_datainptest.cpp
newTcp/: CMakeLists.txt  main.cpp  mocknode.cpp  mocknode.h  nodeserializer.cpp  nodeserializer.h  tcpserver.cpp  tcpserver.h
uml_drafts/: NodeTcpModule.md  tet.xmi
